# my-playlist-share-api

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
api/: db.py  main.py  migrate_db.py
api/cruds/: crud.py
api/login/: login.py
api/models/: authority.py  playlist.py  user.py
api/playlist/: playlist.py
api/routers/: router.py
api/schemas/: authority.py  playlist.py  user.py
api/user/: user.py
api/utils/: auth.py  utility.py
